# my_first_robot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/battery_monitor/lib/battery_monitor/: battery_subscriber
install/battery_monitor/share/battery_monitor/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/battery_msg/share/battery_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/battery_msg/share/battery_msg/cmake/: battery_msg__rosidl_typesupport_cExport-noconfig.cmake  battery_msg__rosidl_typesupport_cExport.cmake  battery_msg__rosidl_typesupport_cppExport.cmake  battery_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  battery_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  battery_msg__rosidl_typesupport_introspection_cppExport.cmake  export_battery_msg__rosidl_generator_pyExport-noconfig.cmake  export_battery_msg__rosidl_generator_pyExport.cmake  export_battery_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_battery_msg__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/battery_msg/share/battery_msg/msg/: BatteryStatus.idl  BatteryStatus.msg
log/: latest_build
src/battery_monitor/: setup.py
src/battery_monitor/battery_monitor/: battery_publisher.py
src/battery_msg/: CMakeLists.txt
src/battery_msg/msg/install/: local_setup.sh  setup.sh  setup.zsh
src/battery_msg/msg/log/: latest_build
src/install/: local_setup.sh  setup.sh
src/install/battery_monitor/lib/battery_monitor/: battery_publisher
src/install/battery_monitor/share/battery_monitor/: package.ps1  package.sh  (+1 more)
(+12 files in other folders)
